force-app/main/default/objects/MinimumValueConfig__mdt/MinimumValueConfig__mdt.object-meta.xml
<CustomObject>
    <description>Tabela parametrizável de valores mínimos por secção, subsecção, tipo e subtipo para consumo por Apex e API.</description>
    <label>Configuração de Valores Mínimos</label>
    <pluralLabel>Configurações de Valores Mínimos</pluralLabel>
</CustomObject>