force-app/main/default/objects/MinimumValueConfig__mdt/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>Moeda</label>
    <length>3</length>
    <type>Text</type>
</CustomField>