force-app/main/default/objects/MinimumValueConfig__mdt/fields/MinimumValue__c.field-meta.xml
<CustomField>
    <fullName>MinimumValue__c</fullName>
    <label>Valor Mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>