force-app/main/default/objects/MinimumValueConfig__mdt/fields/SectionCode__c.field-meta.xml
<CustomField>
    <fullName>SectionCode__c</fullName>
    <label>Código da Secção</label>
    <length>50</length>
    <type>Text</type>
</CustomField>