force-app/main/default/objects/MinimumValueConfig__mdt/fields/SectionName__c.field-meta.xml
<CustomField>
    <fullName>SectionName__c</fullName>
    <label>Nome da Secção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>