force-app/main/default/objects/MinimumValueConfig__mdt/fields/SubsectionCode__c.field-meta.xml
<CustomField>
    <fullName>SubsectionCode__c</fullName>
    <label>Código da Subsecção</label>
    <length>50</length>
    <type>Text</type>
</CustomField>