force-app/main/default/objects/MinimumValueConfig__mdt/fields/SubsectionName__c.field-meta.xml
<CustomField>
    <fullName>SubsectionName__c</fullName>
    <label>Nome da Subsecção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>