force-app/main/default/objects/MinimumValueConfig__mdt/fields/SubtypeCode__c.field-meta.xml
<CustomField>
    <fullName>SubtypeCode__c</fullName>
    <label>Código do Subtipo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>