force-app/main/default/objects/MinimumValueConfig__mdt/fields/SubtypeName__c.field-meta.xml
<CustomField>
    <fullName>SubtypeName__c</fullName>
    <label>Nome do Subtipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>