force-app/main/default/objects/MinimumValueConfig__mdt/fields/TypeCode__c.field-meta.xml
<CustomField>
    <fullName>TypeCode__c</fullName>
    <label>Código do Tipo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>