force-app/main/default/objects/MinimumValueConfig__mdt/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <label>Nome do Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>