force-app/main/default/objects/MinimumValueConfig__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsActive__c</columns>
    <columns>SectionCode__c</columns>
    <columns>SubsectionCode__c</columns>
    <columns>MinimumValue__c</columns>
    <columns>CurrencyCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>